# ai

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
app/: config.py  main.py
app/learn_pytorch/: main.py  pyproject.toml
app/learn_pytorch/models/: csp.py
app/learn_pytorch/src/models/: __init__.py
app/learn_pytorch/src/utils/: loader.py
app/learn_pytorch/utils/: loader.py
app/models/: cnn.py
app/utils/: test_train.py
