[project]
name = "packages"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.1"
dependencies = [
    'agents',
    'pytorch',
]

# Monorepo
[tool.uv.sources]
agents = { workspace = true }
pytorch = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
# exclude = ["packages/seeds"]

# Formatting
[tool.ruff.format]
quote-style = "single"

# Building libs
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]